--- a/jsconfig.json
+++ b/jsconfig.json
@@ -16,6 +16,10 @@
         "gatsby-theme-ripperoni/components/src/components",
         "node_modules/@packdigital/gatsby-theme-ripperoni-components/src/components",
       ],
+      "@ripperoni/components/*": [
+        "gatsby-theme-ripperoni/components/src/*",
+        "node_modules/@packdigital/gatsby-theme-ripperoni-components/src/*",
+      ],
       "@ripperoni/hooks": [
         "gatsby-theme-ripperoni/components/src/hooks",
         "node_modules/@packdigital/gatsby-theme-ripperoni-components/src/hooks",
