--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,11 @@
 {
   "packages": [
-    "configs/*",
+    "tools/*",
     "packages/*",
     "plugins/*",
     "themes/*"
   ],
-  "version": "0.0.0",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "version": "independent"
 }
