--- a/themes/gatsby-theme-ripperoni-account/package.json
+++ b/themes/gatsby-theme-ripperoni-account/package.json
@@ -1,22 +1,15 @@
 {
   "name": "@packdigital/gatsby-theme-ripperoni-account",
   "version": "0.0.20",
+  "author": "@packdigital",
   "description": "",
+  "repository": "https://github.com/packdigital/ripperoni",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "clean": "gatsby clean",
-    "reset": "git clean -dfx && git reset --hard && yarn",
-    "version": "standard-version",
-    "prepare-release": "run-s reset version",
-    "publish-release": "yarn prepare-release && git push --follow-tags origin master && yarn publish --non-interactive"
-  },
-  "author": "@packdigital",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/packdigital/gatsby-theme-ripperoni-account.git"
+    "clean": "gatsby clean"
   },
   "peerDependencies": {
     "@packdigital/gatsby-theme-ripperoni-components": "^1.1.11",
@@ -28,13 +21,12 @@
     "react-dom": "^16.12.0",
     "theme-ui": "^0.3.1"
   },
-  "devDependencies": {},
-  "prettier": "@packdigital/prettier-config-ripperoni",
   "dependencies": {
     "country-and-province": "^1.2.0",
     "country-list": "^2.2.0",
     "gatsby-plugin-create-client-paths": "^2.3.4",
     "react-dropdown": "^1.7.0",
     "use-reducer-async": "^2.0.1"
-  }
+  },
+  "prettier": "@packdigital/prettier-config-ripperoni"
 }
