--- a/themes/gatsby-theme-ripperoni-netlify/package.json
+++ b/themes/gatsby-theme-ripperoni-netlify/package.json
@@ -1,27 +1,15 @@
 {
   "name": "@packdigital/gatsby-theme-ripperoni-netlify",
   "version": "0.0.13",
+  "author": "@packdigital",
   "description": "",
+  "repository": "https://github.com/packdigital/ripperoni",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "clean": "gatsby clean",
-    "reset": "git clean -dfx && git reset --hard && yarn",
-    "version": "standard-version",
-    "prepare-release": "run-s reset version",
-    "publish-release": "yarn prepare-release && git push --follow-tags origin master && yarn publish --non-interactive"
-  },
-  "author": "@packdigital",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/packdigital/gatsby-theme-ripperoni-netlify.git"
-  },
-  "prettier": "@packdigital/prettier-config-ripperoni",
-  "dependencies": {
-    "gatsby-plugin-netlify": "^2.3.10",
-    "http-proxy-middleware": "^1.0.4"
+    "clean": "gatsby clean"
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
@@ -29,7 +17,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
+  "dependencies": {
+    "gatsby-plugin-netlify": "^2.3.10",
+    "http-proxy-middleware": "^1.0.4"
+  },
   "devDependencies": {
     "netlify-plugin-gatsby-cache": "^0.3.2"
-  }
+  },
+  "prettier": "@packdigital/prettier-config-ripperoni"
 }
