--- a/themes/gatsby-theme-ripperoni-search/package.json
+++ b/themes/gatsby-theme-ripperoni-search/package.json
@@ -1,22 +1,15 @@
 {
   "name": "@packdigital/gatsby-theme-ripperoni-search",
   "version": "0.0.5",
+  "author": "@packdigital",
   "description": "",
+  "repository": "https://github.com/packdigital/ripperoni",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "clean": "gatsby clean",
-    "reset": "git clean -dfx && git reset --hard && yarn",
-    "version": "standard-version",
-    "prepare-release": "run-s reset version",
-    "publish-release": "yarn prepare-release && git push --follow-tags origin master && yarn publish --non-interactive"
-  },
-  "author": "@packdigital",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/packdigital/gatsby-theme-ripperoni-search.git"
+    "clean": "gatsby clean"
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
@@ -24,9 +17,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
-  "devDependencies": {},
-  "prettier": "@packdigital/prettier-config-ripperoni",
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.4.2"
-  }
+  },
+  "prettier": "@packdigital/prettier-config-ripperoni"
 }
