--- a/themes/gatsby-theme-ripperoni-store/package.json
+++ b/themes/gatsby-theme-ripperoni-store/package.json
@@ -1,19 +1,22 @@
 {
   "name": "@packdigital/gatsby-theme-ripperoni-store",
   "version": "0.0.4",
+  "author": "@packdigital",
   "description": "",
+  "repository": "https://github.com/packdigital/ripperoni",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "clean": "gatsby clean",
-    "reset": "git clean -dfx && git reset --hard && yarn",
-    "version": "standard-version",
-    "prepare-release": "run-s reset version",
-    "publish-release": "yarn prepare-release && git push --follow-tags origin master && yarn publish --non-interactive"
+    "clean": "gatsby clean"
   },
-  "author": "@packdigital",
-  "license": "MIT",
+  "peerDependencies": {
+    "@packdigital/ripperoni-utilities": "^2.0.21",
+    "gatsby": "^2.21.22",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "apollo-cache-inmemory": "^1.6.6",
@@ -25,16 +28,5 @@
     "isomorphic-fetch": "^2.2.1",
     "ws": "^7.3.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/packdigital/gatsby-theme-ripperoni-store.git"
-  },
-  "peerDependencies": {
-    "@packdigital/ripperoni-utilities": "^2.0.21",
-    "gatsby": "^2.21.22",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "devDependencies": {},
   "prettier": "@packdigital/prettier-config-ripperoni"
 }
