--- a/tools/package.json
+++ b/tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tools",
+  "name": "@packdigital/tools",
   "version": "1.0.0",
   "description": "Tooling for Ripperoni",
   "files": [],
