add projects to lerna.json but also add private: true to their package.json so they don't get published

--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,8 @@
     "tools/*",
     "packages/*",
     "plugins/*",
-    "themes/*"
+    "themes/*",
+    "projects/*"
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
