don't run publish command

--- a/packages/ripperoni-utilities/package.json
+++ b/packages/ripperoni-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@packdigital/ripperoni-utilities",
-  "version": "2.0.31",
+  "version": "2.0.32",
   "author": "@packdigital",
   "description": "utilities for use with the ripperoni suite of tools",
   "repository": "https://github.com/packdigital/ripperoni/tree/master/packages/ripperoni-utilities",
@@ -31,7 +31,7 @@
     "doc": "run-s doc:html && open-cli build/docs/index.html",
     "doc:html": "typedoc",
     "doc:json": "typedoc --json build/docs/typedoc.json",
-    "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
+    "doc:publish2": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "version": "standard-version",
     "reset": "git clean -dfx && git reset --hard && yarn",
     "clean": "trash build test",
@@ -80,6 +80,7 @@
     "gh-pages": "^2.0.1",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
+    "standard-version": "^8.0.0",
     "trash-cli": "^3.0.0",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
