kill all scripts

--- a/packages/ripperoni-utilities/package.json
+++ b/packages/ripperoni-utilities/package.json
@@ -13,31 +13,31 @@
     "node": ">=8.9"
   },
   "scripts": {
-    "describe": "npm-scripts-info",
-    "build": "run-s clean && run-p build:*",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
-    "fix": "run-s fix:*",
-    "fix:prettier": "prettier \"src/**/*.ts\" --write",
-    "fix:tslint": "tslint --fix --project .",
-    "test": "run-s build test:*",
-    "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
-    "test:unit": "nyc --silent ava",
-    "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
-    "cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
-    "cov:html": "nyc report --reporter=html",
-    "cov:send": "nyc report --reporter=lcov && codecov",
-    "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
-    "doc": "run-s doc:html && open-cli build/docs/index.html",
-    "doc:html": "typedoc",
-    "doc:json": "typedoc --json build/docs/typedoc.json",
-    "doc:publish2": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
-    "version": "standard-version",
-    "reset": "git clean -dfx && git reset --hard && yarn",
-    "clean": "trash build test",
-    "prepare-release": "run-s reset test cov:check doc:html version doc:publish",
-    "publish-release": "yarn prepare-release && git push --follow-tags origin master && yarn publish --non-interactive",
-    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('ripperoni-utilities must be installed with Yarn: https://yarnpkg.com/')\""
+    "_describe": "npm-scripts-info",
+    "_build": "run-s clean && run-p build:*",
+    "_build:main": "tsc -p tsconfig.json",
+    "_build:module": "tsc -p tsconfig.module.json",
+    "_fix": "run-s fix:*",
+    "_fix:prettier": "prettier \"src/**/*.ts\" --write",
+    "_fix:tslint": "tslint --fix --project .",
+    "_test": "run-s build test:*",
+    "_test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
+    "_test:unit": "nyc --silent ava",
+    "_watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
+    "_cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
+    "_cov:html": "nyc report --reporter=html",
+    "_cov:send": "nyc report --reporter=lcov && codecov",
+    "_cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
+    "_doc": "run-s doc:html && open-cli build/docs/index.html",
+    "_doc:html": "typedoc",
+    "_doc:json": "typedoc --json build/docs/typedoc.json",
+    "_doc:publish2": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
+    "_version": "standard-version",
+    "_reset": "git clean -dfx && git reset --hard && yarn",
+    "_clean": "trash build test",
+    "_prepare-release": "run-s reset test cov:check doc:html version doc:publish",
+    "_publish-release": "yarn prepare-release && git push --follow-tags origin master && yarn publish --non-interactive",
+    "_preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('ripperoni-utilities must be installed with Yarn: https://yarnpkg.com/')\""
   },
   "scripts-info": {
     "info": "Display information about the package scripts",
