--- a/packages/ripperoni-utilities/package.json
+++ b/packages/ripperoni-utilities/package.json
@@ -64,7 +64,8 @@
     "prettyjson": "^1.2.1",
     "react-dom": "^16.13.1",
     "sha.js": "^2.4.11",
-    "typedoc": "^0.17.0-3"
+    "typedoc": "^0.17.0-3",
+    "typescript": "^3.9.6"
   },
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
