--- a/plugins/gatsby-source-backpack-shopify-collection/package.json
+++ b/plugins/gatsby-source-backpack-shopify-collection/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.0.0"
   },
   "dependencies": {
+    "@packdigital/ripperoni-utilities": "^2.0.41",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
@@ -29,6 +30,7 @@
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
     "lodash.camelcase": "^4.3.0",
+    "lodash.get": "^4.4.2",
     "lodash.startcase": "^4.4.0",
     "progress": "^2.0.3",
     "uuid": "^7.0.1"
