--- a/plugins/gatsby-source-backpack/package.json
+++ b/plugins/gatsby-source-backpack/package.json
@@ -20,8 +20,10 @@
     "@packdigital/ripperoni-utilities": "^2.0.41",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
-    "apollo-link": "^1.2.13",
+    "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "chalk": "^2.4.2",
     "gatsby-node-helpers": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.3",
@@ -29,7 +31,8 @@
     "graphql-tag": "^2.10.3",
     "is-online": "^8.2.1",
     "isomorphic-fetch": "^2.2.1",
-    "prettyjson": "^1.2.1"
+    "prettyjson": "^1.2.1",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
