--- a/plugins/gatsby-source-backpack/package.json
+++ b/plugins/gatsby-source-backpack/package.json
@@ -25,6 +25,7 @@
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
     "chalk": "^2.4.2",
+    "deep-diff": "^1.0.2",
     "gatsby-node-helpers": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.3",
     "graphql": "^14.6.0",
