--- a/packages/ripperoni-utilities/package.json
+++ b/packages/ripperoni-utilities/package.json
@@ -23,21 +23,13 @@
     "test": "run-s build test:*",
     "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
     "test:unit": "nyc --silent ava",
-    "_watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
-    "_cov": "run-s build test:unit cov:html && open-cli coverage/index.html",
-    "_cov:html": "nyc report --reporter=html",
-    "_cov:send": "nyc report --reporter=lcov && codecov",
-    "_cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
-    "_doc": "run-s doc:html && open-cli build/docs/index.html",
-    "_doc:html": "typedoc",
-    "_doc:json": "typedoc --json build/docs/typedoc.json",
-    "_doc:publish2": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
-    "_version": "standard-version",
-    "_reset": "git clean -dfx && git reset --hard && yarn",
     "clean": "trash build test",
-    "_prepare-release": "run-s reset test cov:check doc:html version doc:publish",
-    "_publish-release": "yarn prepare-release && git push --follow-tags origin master && yarn publish --non-interactive",
-    "_preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('ripperoni-utilities must be installed with Yarn: https://yarnpkg.com/')\""
+    "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
+    "doc": "run-s doc:html && doc:publish",
+    "doc:html": "typedoc",
+    "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
+    "prepare-release": "run-s test doc",
+    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('ripperoni-utilities must be installed with Yarn: https://yarnpkg.com/')\""
   },
   "scripts-info": {
     "info": "Display information about the package scripts",
@@ -45,12 +37,8 @@
     "fix": "Try to automatically fix any linting problems",
     "test": "Lint and unit test the project",
     "watch": "Watch and rebuild the project on save, then rerun relevant tests",
-    "cov": "Rebuild, run tests, then create and open the coverage report",
     "doc": "Generate HTML API documentation and open it in a browser",
-    "doc:json": "Generate API documentation in typedoc JSON format",
-    "version": "Bump package.json version, update CHANGELOG.md, tag release",
-    "reset": "Delete all untracked files and reset the repo to the last commit",
-    "prepare-release": "One-step: clean, build, test, publish docs, and prep a release"
+    "prepare-release": "One-step: test, publish docs"
   },
   "dependencies": {
     "abab": "^2.0.3",
@@ -77,7 +65,6 @@
     "gh-pages": "^2.0.1",
     "nyc": "^14.1.1",
     "open-cli": "^5.0.0",
-    "standard-version": "^8.0.0",
     "trash-cli": "^3.0.0",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
