--- a/themes/gatsby-theme-ripperoni-components/package.json
+++ b/themes/gatsby-theme-ripperoni-components/package.json
@@ -24,6 +24,7 @@
     "airbnb-prop-types": "^2.15.0",
     "debug": "^4.1.1",
     "deepmerge": "^4.2.2",
+    "framer-motion": "^2.1.2",
     "gatsby-image": "^2.4.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-react-svg": "^3.0.0",
