--- a/plugins/gatsby-source-backpack/package.json
+++ b/plugins/gatsby-source-backpack/package.json
@@ -14,7 +14,7 @@
     "gatsby-source-plugin"
   ],
   "peerDependencies": {
-    "gatsby": "^2.0.0"
+    "gatsby": "^2.12.1"
   },
   "dependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.45",
@@ -26,6 +26,7 @@
     "apollo-utilities": "^1.3.4",
     "chalk": "^2.4.2",
     "deep-diff": "^1.0.2",
+    "fs-extra": "^9.0.1",
     "gatsby-node-helpers": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.3",
     "graphql": "^14.6.0",
@@ -39,7 +40,6 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.6",
     "babel-plugin-import-graphql": "^2.7.0",
-    "babel-preset-gatsby-package": "^0.4.1",
     "npm-run-all": "^4.1.5",
     "standard-version": "^8.0.0"
   },
