feat: fragments for backpack products

--- a/plugins/gatsby-source-backpack/.babelrc
+++ b/plugins/gatsby-source-backpack/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": [
-    "@packdigital/babel-preset-ripperoni"
+    "@packdigital/babel-preset-ripperoni",
+    "babel-preset-gatsby-package"
   ]
 }
