--- a/plugins/gatsby-source-backpack/package.json
+++ b/plugins/gatsby-source-backpack/package.json
@@ -13,6 +13,9 @@
     "gatsby-plugin",
     "gatsby-source-plugin"
   ],
+  "scripts": {
+    "build": "babel src --out-dir ."
+  },
   "peerDependencies": {
     "gatsby": "^2.12.1"
   },
@@ -24,6 +27,7 @@
     "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
+    "babel-preset-gatsby-package": "^0.5.2",
     "chalk": "^2.4.2",
     "deep-diff": "^1.0.2",
     "fs-extra": "^9.0.1",
