--- a/themes/gatsby-theme-ripperoni-cart/package.json
+++ b/themes/gatsby-theme-ripperoni-cart/package.json
@@ -13,6 +13,7 @@
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
+    "framer-motion": "^2.2.0",
     "gatsby": "^2.19.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
