--- a/themes/gatsby-theme-ripperoni-components/package.json
+++ b/themes/gatsby-theme-ripperoni-components/package.json
@@ -15,6 +15,7 @@
     "@loadable/component": "^5.12.0",
     "@packdigital/ripperoni-utilities": "^2.0.21",
     "dateformat": "^3.0.3",
+    "framer-motion": "^2.2.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "theme-ui": "^0.3.1"
   },
