temporary hack to get public rec to build

--- a/themes/gatsby-theme-ripperoni-core/package.json
+++ b/themes/gatsby-theme-ripperoni-core/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@lekoarts/gatsby-theme-styleguide": "^1.1.10",
+    "abortcontroller-polyfill": "^1.4.0",
     "chalk": "^4.1.0",
     "dateformat": "^3.0.3",
     "gatsby-plugin-eslint": "^2.0.8",
