--- a/plugins/gatsby-source-backpack/package.json
+++ b/plugins/gatsby-source-backpack/package.json
@@ -29,6 +29,7 @@
     "apollo-utilities": "^1.3.4",
     "babel-preset-gatsby-package": "^0.5.2",
     "chalk": "^2.4.2",
+    "core-js": "2.6.11",
     "deep-diff": "^1.0.2",
     "fs-extra": "^9.0.1",
     "gatsby-node-helpers": "^0.3.0",
