--- a/plugins/gatsby-source-backpack/.gitignore
+++ b/plugins/gatsby-source-backpack/.gitignore
@@ -3,3 +3,19 @@ node_modules
 *.log
 yarn.lock
 *.DS_Store
+
+client.js
+constants.js
+download-images.js
+gatsby-node.js
+index.js
+middlewares.js
+nodes.js
+source.js
+subscription.js
+types.js
+
+fragments/
+gatsby/
+graphql/
+queries/
