--- a/plugins/gatsby-source-backpack/package.json
+++ b/plugins/gatsby-source-backpack/package.json
@@ -45,10 +45,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.6",
-    "babel-plugin-import-graphql": "^2.7.0",
-    "npm-run-all": "^4.1.5",
-    "standard-version": "^8.0.0"
+    "babel-plugin-import-graphql": "^2.7.0"
   },
   "prettier": "@packdigital/prettier-config-ripperoni"
 }
