--- a/plugins/gatsby-plugin-301-redirects/package.json
+++ b/plugins/gatsby-plugin-301-redirects/package.json
@@ -20,5 +20,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
-  "prettier": "@packdigital/prettier-config-ripperoni"
+  "prettier": "@packdigital/prettier-config-ripperoni",
+  "dependencies": {
+    "count-lines-in-file": "^1.1.0"
+  }
 }
