--- a/tools/eslint-config-ripperoni/package.json
+++ b/tools/eslint-config-ripperoni/package.json
@@ -10,7 +10,7 @@
     "eslintconfig"
   ],
   "peerDependencies": {
-    "eslint": ">= 3",
+    "eslint": "^7.4.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-custom-alias": "^1.2.0",
     "eslint-import-resolver-webpack": "^0.12.1",
