correctly count lines in existing redirect file

--- a/plugins/gatsby-plugin-301-redirects/package.json
+++ b/plugins/gatsby-plugin-301-redirects/package.json
@@ -22,6 +22,6 @@
   },
   "prettier": "@packdigital/prettier-config-ripperoni",
   "dependencies": {
-    "count-lines-in-file": "^1.1.0"
+    "split": "^1.0.1"
   }
 }
