--- a/packages/ripperoni-utilities/package.json
+++ b/packages/ripperoni-utilities/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.47",
   "author": "@packdigital",
   "description": "utilities for use with the ripperoni suite of tools",
-  "repository": "https://github.com/packdigital/ripperoni/tree/master/packages/ripperoni-utilities",
+  "repository": "https://github.com/packdigital/ripperoni/tree/master/packages/ripperoni",
   "license": "MIT",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -25,8 +25,9 @@
     "test:unit": "nyc --silent ava",
     "clean": "trash build test",
     "watch": "run-s clean build:main && run-p \"build:main -- -w\" \"test:unit -- --watch\"",
-    "doc": "run-s doc:html && doc:publish",
-    "doc:html": "typedoc",
+    "doc": "run-s doc:html && open-cli build/docs/index.html",
+    "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --out build/docs",
+    "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
     "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
     "prepare-release": "run-s test doc",
     "_preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('ripperoni-utilities must be installed with Yarn: https://yarnpkg.com/')\""
@@ -47,6 +48,7 @@
     "deepmerge": "^4.2.2",
     "is-base64": "^1.1.0",
     "lodash": "^4.17.15",
+    "npm-run-all": "^4.1.5",
     "typedoc": "^0.17.0-3",
     "typescript": "^3.9.6"
   },
