--- a/themes/gatsby-theme-ripperoni-backpack/package.json
+++ b/themes/gatsby-theme-ripperoni-backpack/package.json
@@ -21,5 +21,6 @@
     "@packdigital/gatsby-source-backpack": "^0.3.19",
     "@packdigital/gatsby-source-backpack-shopify-collection": "^0.3.15-experimental-bulk-request.0"
   },
-  "prettier": "@packdigital/prettier-config-ripperoni"
+  "prettier": "@packdigital/prettier-config-ripperoni",
+  "gitHead": "dd785154c326e38e3423cc5fdcee4a8548031c0b"
 }
