--- a/tools/eslint-config-ripperoni/package.json
+++ b/tools/eslint-config-ripperoni/package.json
@@ -11,6 +11,7 @@
   ],
   "peerDependencies": {
     "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-custom-alias": "^1.2.0",
     "eslint-import-resolver-webpack": "^0.12.1",
