--- a/themes/gatsby-theme-ripperoni-components/package.json
+++ b/themes/gatsby-theme-ripperoni-components/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@theme-ui/match-media": "0.3.1",
     "@theme-ui/presets": "^0.3.0",
+    "@u-wave/react-vimeo": "^0.9.0",
     "airbnb-prop-types": "^2.15.0",
     "debug": "^4.1.1",
     "gatsby-image": "^2.4.0",
