tune up account and cart contexts and add browser-only hoc

--- a/themes/gatsby-theme-ripperoni-cart/package.json
+++ b/themes/gatsby-theme-ripperoni-cart/package.json
@@ -20,6 +20,7 @@
   },
   "prettier": "@packdigital/prettier-config-ripperoni",
   "dependencies": {
+    "immutability-helper": "^3.1.1",
     "node-fetch": "^2.6.0",
     "shopify-buy": "^2.10.0"
   }
