--- a/packages/ripperoni-utilities/tsconfig.json
+++ b/packages/ripperoni-utilities/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "composite": true,
     "target": "es2017",
     "outDir": "./build/main",
     "rootDir": "./src",
@@ -36,22 +37,9 @@
     // "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
     // "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
-    "lib": [
-      "es2017",
-      "dom"
-    ],
-    "types": [
-      "node",
-      "is-base64",
-      "lodash",
-      "node",
-      "react",
-      "react-dom"
-    ],
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ]
+    "lib": ["es2017", "dom", "esnext"],
+    "types": ["node", "is-base64", "lodash", "node", "react", "react-dom"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["./src/**/*.ts"],
   "exclude": ["./node_modules/**"],
