roll back alias map by 1 but leave code commented out

--- a/tools/eslint-config-ripperoni/package.json
+++ b/tools/eslint-config-ripperoni/package.json
@@ -22,5 +22,8 @@
     "extends": [
       "@packdigital/eslint-config-ripperoni"
     ]
+  },
+  "dependencies": {
+    "@packdigital/ripperoni-utilities": "^2.0.51"
   }
 }
