adds event bus theme

--- a/themes/gatsby-theme-ripperoni-core/jsconfig.json
+++ b/themes/gatsby-theme-ripperoni-core/jsconfig.json
@@ -27,3 +27,15 @@
   },
   "include": ["src/**/*"]
 }
+
+// ```
+// {
+//   allowJs: true,
+//   maxNodeModuleJsDepth: 2,
+//   allowSyntheticDefaultImports: true,
+//   skipLibCheck: true,
+//   noEmit: true,
+//   include: [],
+//   exclude: []
+// }
+// ```
