comment out dev-favicon and add index.js for easier module navigation

--- a/tools/babel-preset-ripperoni/package.json
+++ b/tools/babel-preset-ripperoni/package.json
@@ -9,9 +9,10 @@
     "@babel/core": "^7.10.2"
   },
   "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.10.1"
+    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
+    "@babel/preset-env": "^7.11.5"
   },
-  "prettier": "./prettier.config.js",
+  "prettier": "@packdigital/prettier-config-ripperoni",
   "eslintConfig": {
     "extends": [
       "@packdigital/eslint-config-ripperoni"
