--- a/tools/eslint-config-ripperoni/package.json
+++ b/tools/eslint-config-ripperoni/package.json
@@ -13,6 +13,7 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0"
