--- a/themes/gatsby-theme-ripperoni-cms/package.json
+++ b/themes/gatsby-theme-ripperoni-cms/package.json
@@ -14,10 +14,11 @@
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
     "gatsby": "^2.19.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "dependencies": {
+    "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-source-contentful": "^2.3.15"
   },
   "prettier": "@packdigital/prettier-config-ripperoni",
