--- a/themes/gatsby-theme-ripperoni-core/package.json
+++ b/themes/gatsby-theme-ripperoni-core/package.json
@@ -28,7 +28,7 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.11",
-    "gatsby-plugin-theme-ui": "0.3.0",
+    "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.11",
     "gatsby-transformer-sharp": "^2.5.5",
     "intersection-observer": "^0.11.0",
