--- a/themes/gatsby-theme-ripperoni-cart/package.json
+++ b/themes/gatsby-theme-ripperoni-cart/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "immutability-helper": "^3.1.1",
     "node-fetch": "^2.6.0",
-    "shopify-buy": "^2.10.0"
+    "shopify-buy": "^2.10.0",
+    "use-persisted-state": "^0.3.0"
   }
 }
