updates account and cart primary

--- a/themes/gatsby-theme-ripperoni-cart/package.json
+++ b/themes/gatsby-theme-ripperoni-cart/package.json
@@ -12,6 +12,8 @@
     "clean": "gatsby clean"
   },
   "peerDependencies": {
+    "@packdigital/gatsby-theme-ripperoni-account": "^0.0.60",
+    "@packdigital/gatsby-theme-ripperoni-message-bus": "^0.0.12",
     "@packdigital/ripperoni-utilities": "^2.0.21",
     "framer-motion": "^2.2.0",
     "gatsby": "^2.19.5",
