--- a/themes/gatsby-theme-ripperoni-cart/package.json
+++ b/themes/gatsby-theme-ripperoni-cart/package.json
@@ -25,6 +25,6 @@
     "immutability-helper": "^3.1.1",
     "node-fetch": "^2.6.0",
     "shopify-buy": "^2.10.0",
-    "use-persisted-state": "^0.3.0"
+    "use-local-storage-state": "^5.1.0"
   }
 }
