--- a/plugins/gatsby-source-backpack/package.json
+++ b/plugins/gatsby-source-backpack/package.json
@@ -41,6 +41,7 @@
     "is-online": "^8.2.1",
     "isomorphic-fetch": "^2.2.1",
     "prettyjson": "^1.2.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "ws": "^7.3.1"
   },
   "devDependencies": {
