--- a/plugins/gatsby-plugin-301-redirects/package.json
+++ b/plugins/gatsby-plugin-301-redirects/package.json
@@ -16,7 +16,7 @@
     "clean": "gatsby clean"
   },
   "peerDependencies": {
-    "gatsby": "^2.19.5",
+    "gatsby": "^2.19.5 || ^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
