--- a/plugins/gatsby-source-backpack/package.json
+++ b/plugins/gatsby-source-backpack/package.json
@@ -5,9 +5,6 @@
   "description": "something something whatever who gives a crap.",
   "license": "MIT",
   "main": "index.js",
-  "engines": {
-    "node": ">=8.0.0"
-  },
   "keywords": [
     "gatsby",
     "gatsby-plugin",
@@ -19,7 +16,7 @@
     "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
-    "gatsby": "^2.19.5"
+    "gatsby": "^2.19.5 || ^3.0.0"
   },
   "dependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.54",
@@ -34,9 +31,9 @@
     "core-js": "2.6.11",
     "deep-diff": "^1.0.2",
     "fs-extra": "^9.0.1",
-    "gatsby-node-helpers": "^0.3.0",
-    "gatsby-source-filesystem": "^2.3.3",
-    "graphql": "^14.6.0",
+    "gatsby-node-helpers": "^1.2.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "graphql": "^15.4.0",
     "graphql-tag": "^2.10.3",
     "is-online": "^8.2.1",
     "isomorphic-fetch": "^2.2.1",
