--- a/themes/gatsby-theme-ripperoni-components/package.json
+++ b/themes/gatsby-theme-ripperoni-components/package.json
@@ -13,8 +13,9 @@
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
-    "gatsby": "^2.19.5",
-    "gatsby-image": "^2.4.21",
+    "gatsby": "^2.19.5 || ^3.0.0",
+    "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-sharp": "^3.7.1",
     "theme-ui": "^0.3.1"
   },
   "dependencies": {
@@ -27,7 +28,7 @@
     "dateformat": "^3.0.3",
     "debug": "^4.1.1",
     "framer-motion": "^2.7.7",
-    "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-plugin-theme-ui": "^0.9.1",
     "lodash.uniqueid": "^4.0.1",
     "react-error-boundary": "^2.0.2",
     "react-intersection-observer": "^8.26.2"
