--- a/themes/gatsby-theme-ripperoni-core/package.json
+++ b/themes/gatsby-theme-ripperoni-core/package.json
@@ -13,24 +13,24 @@
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.31",
-    "gatsby": "^2.19.5",
+    "gatsby": "^2.19.5 || ^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "theme-ui": "^0.3.1"
   },
   "dependencies": {
-    "@lekoarts/gatsby-theme-styleguide": "^1.1.10",
+    "@lekoarts/gatsby-theme-styleguide": "^2.0.0",
     "abab": "^2.0.3",
     "abortcontroller-polyfill": "^1.4.0",
     "chalk": "^4.1.0",
     "dateformat": "^3.0.3",
-    "gatsby-plugin-manifest": "^2.4.11",
-    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-react-helmet": "^4.7.1",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-source-filesystem": "^2.3.11",
-    "gatsby-transformer-sharp": "^2.5.5",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-sharp": "^3.7.1",
     "intersection-observer": "^0.11.0",
     "react-helmet": "^6.1.0"
   },
