--- a/themes/gatsby-theme-ripperoni-marketing/package.json
+++ b/themes/gatsby-theme-ripperoni-marketing/package.json
@@ -13,17 +13,17 @@
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
-    "gatsby": "^2.19.5",
+    "gatsby": "^2.19.5 || ^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0"
   },
   "dependencies": {
     "gatsby-plugin-facebook-pixel": "^1.0.3",
-    "gatsby-plugin-google-analytics": "^2.3.4",
-    "gatsby-plugin-google-marketing-platform": "^0.1.21",
+    "gatsby-plugin-google-analytics": "^3.7.1",
+    "gatsby-plugin-google-marketing-platform": "^0.2.0",
     "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sitemap": "^2.4.5",
+    "gatsby-plugin-sitemap": "^4.3.1",
     "prop-types": "^15.7.2"
   },
   "prettier": "@packdigital/prettier-config-ripperoni"
