--- a/themes/gatsby-theme-ripperoni-netlify/package.json
+++ b/themes/gatsby-theme-ripperoni-netlify/package.json
@@ -13,12 +13,12 @@
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
-    "gatsby": "^2.19.5",
+    "gatsby": "^2.19.5 || ^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "dependencies": {
-    "gatsby-plugin-netlify": "^2.3.10",
+    "gatsby-plugin-netlify": "^3.7.1",
     "http-proxy-middleware": "^1.0.4"
   },
   "devDependencies": {
