--- a/themes/gatsby-theme-ripperoni-search/package.json
+++ b/themes/gatsby-theme-ripperoni-search/package.json
@@ -13,12 +13,12 @@
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
-    "gatsby": "^2.19.5",
+    "gatsby": "^2.19.5 || ^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "dependencies": {
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.4.2"
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2"
   },
   "prettier": "@packdigital/prettier-config-ripperoni"
 }
