--- a/themes/gatsby-theme-ripperoni-store/package.json
+++ b/themes/gatsby-theme-ripperoni-store/package.json
@@ -13,7 +13,7 @@
   },
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
-    "gatsby": "^2.19.5",
+    "gatsby": "^2.19.5 || ^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -25,7 +25,7 @@
     "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
-    "graphql": "^15.3.0",
+    "graphql": "^15.4.0",
     "isomorphic-fetch": "^2.2.1",
     "subscriptions-transport-ws": "^0.9.18",
     "ws": "^7.3.0"
