--- a/themes/gatsby-theme-ripperoni-cms/package.json
+++ b/themes/gatsby-theme-ripperoni-cms/package.json
@@ -14,10 +14,11 @@
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
     "gatsby": "^2.19.5 || ^3.0.0",
+    "gatsby-image": "^3.8.0",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-sharp": "^3.7.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "dependencies": {
     "gatsby-source-contentful": "^5.7.1"
