--- a/themes/gatsby-theme-ripperoni-components/package.json
+++ b/themes/gatsby-theme-ripperoni-components/package.json
@@ -14,13 +14,14 @@
   "peerDependencies": {
     "@packdigital/ripperoni-utilities": "^2.0.21",
     "gatsby": "^2.19.5 || ^3.0.0",
+    "gatsby-image": "^3.8.0",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-sharp": "^3.7.1",
-    "theme-ui": "^0.3.1"
+    "theme-ui": "^0.10.0"
   },
   "dependencies": {
-    "@contentful/rich-text-from-markdown": "^14.1.1",
-    "@contentful/rich-text-react-renderer": "^14.1.1",
+    "@contentful/rich-text-from-markdown": "^14.1.2",
+    "@contentful/rich-text-react-renderer": "^14.1.2",
     "@theme-ui/match-media": "0.3.1",
     "@theme-ui/presets": "^0.3.0",
     "@u-wave/react-vimeo": "^0.9.0",
@@ -28,7 +29,7 @@
     "dateformat": "^3.0.3",
     "debug": "^4.1.1",
     "framer-motion": "^2.7.7",
-    "gatsby-plugin-theme-ui": "^0.9.1",
+    "gatsby-plugin-theme-ui": "^0.10.1",
     "lodash.uniqueid": "^4.0.1",
     "react-error-boundary": "^2.0.2",
     "react-intersection-observer": "^8.26.2"
