--- a/packages/ripperoni-utilities/package.json
+++ b/packages/ripperoni-utilities/package.json
@@ -99,5 +99,6 @@
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  }
+  },
+  "gitHead": "bc978595675269afbf1725cfb9cabb809da1a243"
 }
