--- a/plugins/gatsby-plugin-301-redirects/package.json
+++ b/plugins/gatsby-plugin-301-redirects/package.json
@@ -23,5 +23,6 @@
   "prettier": "@packdigital/prettier-config-ripperoni",
   "dependencies": {
     "split": "^1.0.1"
-  }
+  },
+  "gitHead": "bc978595675269afbf1725cfb9cabb809da1a243"
 }
