--- a/plugins/gatsby-source-backpack-shopify-collection/package.json
+++ b/plugins/gatsby-source-backpack-shopify-collection/package.json
@@ -39,5 +39,6 @@
     "@babel/core": "^7.7.5",
     "cross-env": "^5.2.1"
   },
-  "prettier": "@packdigital/prettier-config-ripperoni"
+  "prettier": "@packdigital/prettier-config-ripperoni",
+  "gitHead": "bc978595675269afbf1725cfb9cabb809da1a243"
 }
