--- a/themes/gatsby-theme-ripperoni-301-redirects/package.json
+++ b/themes/gatsby-theme-ripperoni-301-redirects/package.json
@@ -21,5 +21,6 @@
     "@packdigital/gatsby-plugin-301-redirects": "^2.0.1",
     "gatsby-source-google-spreadsheet": "^2.0.0"
   },
-  "prettier": "@packdigital/prettier-config-ripperoni"
+  "prettier": "@packdigital/prettier-config-ripperoni",
+  "gitHead": "bc978595675269afbf1725cfb9cabb809da1a243"
 }
