--- a/themes/gatsby-theme-ripperoni-cart/package.json
+++ b/themes/gatsby-theme-ripperoni-cart/package.json
@@ -26,5 +26,6 @@
     "node-fetch": "^2.6.0",
     "shopify-buy": "^2.10.0",
     "use-local-storage-state": "^5.1.0"
-  }
+  },
+  "gitHead": "bc978595675269afbf1725cfb9cabb809da1a243"
 }
