--- a/themes/gatsby-theme-ripperoni-marketing/package.json
+++ b/themes/gatsby-theme-ripperoni-marketing/package.json
@@ -26,5 +26,6 @@
     "gatsby-plugin-sitemap": "^4.3.1",
     "prop-types": "^15.7.2"
   },
-  "prettier": "@packdigital/prettier-config-ripperoni"
+  "prettier": "@packdigital/prettier-config-ripperoni",
+  "gitHead": "bc978595675269afbf1725cfb9cabb809da1a243"
 }
