--- a/themes/gatsby-theme-ripperoni-message-bus/package.json
+++ b/themes/gatsby-theme-ripperoni-message-bus/package.json
@@ -22,5 +22,6 @@
   "dependencies": {
     "pubsub-js": "^1.9.0"
   },
-  "prettier": "@packdigital/prettier-config-ripperoni"
+  "prettier": "@packdigital/prettier-config-ripperoni",
+  "gitHead": "bc978595675269afbf1725cfb9cabb809da1a243"
 }
