--- a/tools/babel-preset-ripperoni/package.json
+++ b/tools/babel-preset-ripperoni/package.json
@@ -17,5 +17,6 @@
     "extends": [
       "@packdigital/eslint-config-ripperoni"
     ]
-  }
+  },
+  "gitHead": "bc978595675269afbf1725cfb9cabb809da1a243"
 }
